--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PartidosDex</string>
+    <string name="points_3">3 PUNTOS</string>
+    <string name="points_2">2 POINTS</string>
+    <string name="point_1">1 POINT</string>
 </resources>
